borsh-derive/src/snapshots/borsh_derive__struct_schema__tests__with_funcs_attr.snap
---
source: borsh-derive/src/struct_schema.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
impl<K, V> borsh::BorshSchema for A<K, V>
where
    K: borsh::BorshSchema,
    V: borsh::BorshSchema,
{
    fn declaration() -> borsh::schema::Declaration {
        let params = borsh::__private::maybestd::vec![
            < K > ::declaration(), < V > ::declaration()
        ];
        format!(r#"{}<{}>"#, "A", params.join(", "))
    }
    fn add_definitions_recursively(
        definitions: &mut borsh::__private::maybestd::collections::BTreeMap<
            borsh::schema::Declaration,
            borsh::schema::Definition,
        >,
    ) {
        let fields = borsh::schema::Fields::NamedFields(
            borsh::__private::maybestd::vec![
                ("x".to_string(), third_party_impl::declaration:: < K, V > ()), ("y"
                .to_string(), < u64 as borsh::BorshSchema > ::declaration())
            ],
        );
        let definition = borsh::schema::Definition::Struct {
            fields,
        };
        let no_recursion_flag = definitions.get(&Self::declaration()).is_none();
        Self::add_definition(Self::declaration(), definition, definitions);
        if no_recursion_flag {
            third_party_impl::add_definitions_recursively::<K, V>(definitions);
            <u64 as borsh::BorshSchema>::add_definitions_recursively(definitions);
        }
    }
}

